[gd_scene load_steps=16 format=3 uid="uid://eep3ms5vae7t"]

[ext_resource type="Script" path="res://scripts/environment/office_door.gd" id="1_sbx6s"]
[ext_resource type="Texture2D" uid="uid://dj8lvi7qxk58k" path="res://textures/environment/office_wall.png" id="2_ux60w"]
[ext_resource type="Texture2D" uid="uid://ci60jc6uk7lv1" path="res://textures/environment/office_door.png" id="3_r8g6m"]
[ext_resource type="AudioStream" uid="uid://bh5cgrjv5rrwm" path="res://audio/sounds/dialogue.mp3" id="4_2vsky"]
[ext_resource type="AudioStream" uid="uid://cy1ixqcalf1vc" path="res://audio/music/intro.mp3" id="4_t055m"]
[ext_resource type="AudioStream" uid="uid://btrypepxbe6ww" path="res://audio/music/after_intro.mp3" id="5_j6i52"]
[ext_resource type="AudioStream" uid="uid://cfnbsr2k4t2w4" path="res://audio/music/loop1.mp3" id="6_34fdd"]

[sub_resource type="BoxMesh" id="BoxMesh_jnwb2"]
size = Vector3(4, 4, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ffx8s"]
albedo_texture = ExtResource("2_ux60w")
uv1_scale = Vector3(0.25, 0.25, 0.25)
uv1_offset = Vector3(0.5, 0.5, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_vetxk"]
size = Vector3(4, 4, 1.14404)

[sub_resource type="BoxShape3D" id="BoxShape3D_yos1b"]
size = Vector3(6, 4, 6)

[sub_resource type="LabelSettings" id="LabelSettings_e7paq"]
font_size = 21

[sub_resource type="Animation" id="Animation_1d7io"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SweetHome:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pwirp"]
resource_name = "intro_dialogue"
length = 25.8
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_2vsky")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 23.5, 25.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 12.6, 23, 23.5, 25.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/Label:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 5.2617, 7.2, 9.4, 13.9, 19.2, 21.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "We have a job for you.", "An old lady is struggling", "in a desperate battle against ", "her inner demons", "You are her last hope", "We are sending you into the depths of her subconscious", "Rip and tear...", "until it is done."]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 23.5, 25.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(23.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_sweet_home"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SweetHome:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(23.5, 25.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-60.406, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hapc"]
_data = {
"RESET": SubResource("Animation_1d7io"),
"intro_dialogue": SubResource("Animation_pwirp")
}

[node name="OfficeDoor" type="Node3D" node_paths=PackedStringArray("wall")]
script = ExtResource("1_sbx6s")
open_position = Vector3(0, -5, 0)
wall = NodePath("AnimatableBody3D")
movement_speed = 0.5

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="AnimatableBody3D"]
mesh = SubResource("BoxMesh_jnwb2")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_ffx8s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0720215)
shape = SubResource("BoxShape3D_vetxk")

[node name="Sprite3D" type="Sprite3D" parent="AnimatableBody3D"]
transform = Transform3D(2.8, 0, 0, 0, 2.8, 0, 0, 0, 2.8, 0, 0, -0.606727)
texture_filter = 0
texture = ExtResource("3_r8g6m")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_yos1b")

[node name="Dialogue" type="AudioStreamPlayer" parent="."]

[node name="SweetHome" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_t055m")

[node name="Reznya" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j6i52")

[node name="ReznyaPolnaya" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_34fdd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -117.5
offset_right = 117.5
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_r8g6m")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -419.0
offset_top = -200.0
offset_right = 419.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_e7paq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0hapc")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="finished" from="SweetHome" to="." method="_on_sweet_home_finished"]
